# jornadadados_btc_aula17

./: README.md  desafio.py  exemplo_01.py  pyproject.toml
